fix and update